better faq styles

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -203,9 +203,9 @@
 <li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
 
 <!--The following are hidden KB titles in order not to refresh the pages-->
-<ol style="position: absolute;left:-2000px;">
+<ol style="position: absolute;left:-2000px;">FAQ
     <li>
-        <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of (Dynamsoft Barcode Reader) Dbr JS deployable files (source code, etc.) ?</a>
+        <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of Dbr JS deployable files ?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html">How to use the JavaScript SDK in offline mode?</a>
@@ -229,7 +229,7 @@
         <a href="{{ site.js }}faq/call-loadWasm-proactively.html">Do we have to call loadWasm proactively?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html">What are the differences between updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a>
+        <a href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html">Differences between updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/different-ways-to-customize-ui.html">What are the different ways to customize the UI?</a>
@@ -256,13 +256,13 @@
         <a href="{{ site.js }}faq/read-from-existing-files.html">How to read barcodes from existing files?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/formats-supported-for-existing-files.html">What file/image formats are supported when reading barcodes from files in local memory?</a>
+        <a href="{{ site.js }}faq/formats-supported-for-existing-files.html">Formats supported when reading barcodes from files in local memory?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/read-text-from-barcode-image.html">How to read the text info usually located around a barcode image?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/scan-US-drivers-license.html">How to scan the barcode on a US Driver’s License and get the first name, last name, DOB, etc.?</a>
+        <a href="{{ site.js }}faq/scan-US-drivers-license.html">How to scan the barcode on a US Driver"s License and get the first name, last name, DOB, etc.?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a “beep” sound once a barcode is found?</a>
@@ -277,10 +277,10 @@
         <a href="{{ site.js }}faq/unable-to-scan-aztec-code.html">Why am I unable to scan an Aztec code in the helloworld sample?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/stop-camera-to-open-right-away.html">How to stop the camera stream from opening right away after DBR JS demo is loaded? How can you enable the camera on the click of a button?</a>
+        <a href="{{ site.js }}faq/stop-camera-to-open-right-away.html">Enable the camera on the click of a button?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/difference-between-barcodeReader-and-barcodeScanner.html">What is the difference between the BarcodeReader class and the BarcodeScanner class? Can they be used interchangeably?</a>
+        <a href="{{ site.js }}faq/difference-between-barcodeReader-and-barcodeScanner.html">What is the difference between the BarcodeReader class and the BarcodeScanner class?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/newline-character-not-being-rendered.html">Why are newline characters not being rendered when displaying the barcode results in a textbox?</a>
@@ -292,13 +292,13 @@
         <a href="{{ site.js }}faq/general-troubleshooting-steps-for-decode-failure.html">What are the general troubleshooting steps if an image fails to decode with the JavaScript SDK?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/difference-between-bestspeed-and-bestcoverage.html">What are the differences between the ‘speed’, ‘coverage’, ‘balance, and ‘single’ runtime templates?</a>
+        <a href="{{ site.js }}faq/difference-between-bestspeed-and-bestcoverage.html">What are the differences between the "speed", "coverage", "balance, and "single" runtime templates?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/avoid-incorrect-barcode-results.html">How to avoid incorrect barcode results?</a>
     </li>
     <li>
-        <a href="{{ site.js }}faq/how-license-tracking-works.html">How does license tracking work with the three standard licensing options - Per Scan, Per Device, Per Concurrent Device?</a>
+        <a href="{{ site.js }}faq/how-license-tracking-works.html">How does the license work - Per Scan, Per Device, Per Concurrent Device?</a>
     </li>
     <li>
         <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license required in per-device licensing model?</a>
