--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -198,109 +198,109 @@
     </ul>
 </li>
 <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a></li>
-<li><a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a></li>
+<li><a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a>
+    <!--The following are hidden KB titles in order not to refresh the pages-->
+    <ul style="position: absolute;top:-20000px;">
+        <li>
+            <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of Dbr JS deployable files ?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html">How to use the JavaScript SDK in offline mode?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/server-requirements-for-dbr-js-deployment.html">What are the server requirements for Dbr JS deployment?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/pros-and-cons-of-cdn.html">What are the pros and cons of using the CDN?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/differences-between-full-and-compact-editions.html">What are the differences between the compact edition and the full edition?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/is-https-required.html">Is HTTPS absolutely required?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html">When to use onFrameRead and when to use onUnduplicateRead?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/call-loadWasm-proactively.html">Do we have to call loadWasm proactively?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html">Differences between updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/different-ways-to-customize-ui.html">What are the different ways to customize the UI?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/get-sdk-logs.html">How to get the logs for the JavaScript SDK?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/upgrade-old-to-new.html">How to upgrade from an old to new version?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/change-domain-binding-of-product-key.html">How to change the domain binding of your product key?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/when-singleFrameMode-is-enabled.html">When is singleFrameMode enabled?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/get-intermediate-result-images.html">How to get intermediate result images?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/read-inverted-image.html">How to read an inverted image?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/read-from-existing-files.html">How to read barcodes from existing files?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/formats-supported-for-existing-files.html">Formats supported when reading barcodes from files in local memory?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/read-text-from-barcode-image.html">How to read the text info usually located around a barcode image?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/scan-US-drivers-license.html">How to scan the barcode on a US Driver"s License and get the first name, last name, DOB, etc.?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a “beep” sound once a barcode is found?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/size-of-wasm.html">What is the size of the JavaScript SDK (.wasm)?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/check-current-version.html">How to check the version of the JavaScript SDK I am currently using?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/unable-to-scan-aztec-code.html">Why am I unable to scan an Aztec code in the helloworld sample?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/stop-camera-to-open-right-away.html">Enable the camera on the click of a button?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/difference-between-barcodeReader-and-barcodeScanner.html">What is the difference between the BarcodeReader class and the BarcodeScanner class?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/newline-character-not-being-rendered.html">Why are newline characters not being rendered when displaying the barcode results in a textbox?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/resolve-magic-word.html">How to resolve the expected magic word error that occurs when using the JavaScript SDK?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/general-troubleshooting-steps-for-decode-failure.html">What are the general troubleshooting steps if an image fails to decode with the JavaScript SDK?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/difference-between-bestspeed-and-bestcoverage.html">What are the differences between the "speed", "coverage", "balance, and "single" runtime templates?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/avoid-incorrect-barcode-results.html">How to avoid incorrect barcode results?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/how-license-tracking-works.html">How does the license work - Per Scan, Per Device, Per Concurrent Device?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license required in per-device licensing model?</a>
+        </li>
+    </ul>
+</li>
 <li class="category">OTHERS</li>
 <li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
-
-<!--The following are hidden KB titles in order not to refresh the pages-->
-<ol style="position: absolute;left:-2000px;">FAQ
-    <li>
-        <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html">How to get a copy of Dbr JS deployable files ?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/javascript-sdk-offline-mode-use.html">How to use the JavaScript SDK in offline mode?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/server-requirements-for-dbr-js-deployment.html">What are the server requirements for Dbr JS deployment?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/pros-and-cons-of-cdn.html">What are the pros and cons of using the CDN?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/differences-between-full-and-compact-editions.html">What are the differences between the compact edition and the full edition?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/is-https-required.html">Is HTTPS absolutely required?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html">When to use onFrameRead and when to use onUnduplicateRead?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/call-loadWasm-proactively.html">Do we have to call loadWasm proactively?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html">Differences between updateScanSettings/updateVideoSettings/updateRuntimeSettings?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/different-ways-to-customize-ui.html">What are the different ways to customize the UI?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/get-sdk-logs.html">How to get the logs for the JavaScript SDK?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/upgrade-old-to-new.html">How to upgrade from an old to new version?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/change-domain-binding-of-product-key.html">How to change the domain binding of your product key?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/when-singleFrameMode-is-enabled.html">When is singleFrameMode enabled?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/get-intermediate-result-images.html">How to get intermediate result images?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/read-inverted-image.html">How to read an inverted image?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/read-from-existing-files.html">How to read barcodes from existing files?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/formats-supported-for-existing-files.html">Formats supported when reading barcodes from files in local memory?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/read-text-from-barcode-image.html">How to read the text info usually located around a barcode image?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/scan-US-drivers-license.html">How to scan the barcode on a US Driver"s License and get the first name, last name, DOB, etc.?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a “beep” sound once a barcode is found?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/size-of-wasm.html">What is the size of the JavaScript SDK (.wasm)?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/check-current-version.html">How to check the version of the JavaScript SDK I am currently using?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/unable-to-scan-aztec-code.html">Why am I unable to scan an Aztec code in the helloworld sample?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/stop-camera-to-open-right-away.html">Enable the camera on the click of a button?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/difference-between-barcodeReader-and-barcodeScanner.html">What is the difference between the BarcodeReader class and the BarcodeScanner class?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/newline-character-not-being-rendered.html">Why are newline characters not being rendered when displaying the barcode results in a textbox?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/resolve-magic-word.html">How to resolve the expected magic word error that occurs when using the JavaScript SDK?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/general-troubleshooting-steps-for-decode-failure.html">What are the general troubleshooting steps if an image fails to decode with the JavaScript SDK?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/difference-between-bestspeed-and-bestcoverage.html">What are the differences between the "speed", "coverage", "balance, and "single" runtime templates?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/avoid-incorrect-barcode-results.html">How to avoid incorrect barcode results?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/how-license-tracking-works.html">How does the license work - Per Scan, Per Device, Per Concurrent Device?</a>
-    </li>
-    <li>
-        <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license required in per-device licensing model?</a>
-    </li>
-</ol>
