add back advanced usage in the menu

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -5,7 +5,7 @@
 <li><a href="{{ site.js }}user-guide/default.html">User Guide</a>
     <ul>
         <li><a href="{{ site.js }}user-guide/index.html" class="otherLinkColour">Get Started</a> </li>
-
+        <li><a href="{{ site.js }}user-guide/advanced-usage.html" class="otherLinkColour">Advanced Usage</a> </li>
         <li><a href="{{ site.js }}user-guide/explore-features/index.html" class="otherLinkColour">Explore Features</a>
             <ul>
                 <li><a class="otherLinkColour">Basic Features</a>
