--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -302,4 +302,4 @@
     </ul>
 </li>
 <li class="category">OTHERS</li>
-<li><a target="_blank" href="{{ site.introduction }}index.html#next-step" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
+<li><a target="_blank" href="{{ site.introduction }}index.html#user-guides" class="otherLinkColour refreshLink">Develop for Mobile or Server/Desktop</a></li>
