added link to new barcode results article

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -33,6 +33,7 @@
                 <li><a class="otherLinkColour">Barcode Results</a>
                     <ul>
                         <li><a href="{{ site.features }}get-confidence-rotation.html?lang=js" class="otherLinkColour">Get barcode confidence and rotation</a></li>
+                        <li><a href="{{ site.features }}get-barcode-location.html?lang=js" class="otherLinkColour">Get barcode location</a></li>
                         <li><a href="{{ site.features }}get-detailed-info.html?lang=js" class="otherLinkColour">Get detailed barcode information</a></li>
                         <li><a href="{{ site.features }}filter-and-sort.html?lang=js" class="otherLinkColour">Filter and sort decoding results</a></li>
                         <li><a href="{{ site.features }}use-intermidiate-results.html?lang=js" class="otherLinkColour">Use intermediate results</a></li>
