fix punctuation marks

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -262,7 +262,7 @@
             <a href="{{ site.js }}faq/scan-US-drivers-license.html">How to scan the barcode on a US Driver"s License and get the first name, last name, DOB, etc.?</a>
         </li>
         <li>
-            <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a “beep” sound once a barcode is found?</a>
+            <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a "beep" sound once a barcode is found?</a>
         </li>
         <li>
             <a href="{{ site.js }}faq/size-of-wasm.html">What is the size of the JavaScript SDK (.wasm)?</a>
