--- a/_layouts/default-layout.html
+++ b/_layouts/default-layout.html
@@ -137,7 +137,7 @@
 
             $('#txtSearch').keydown(function(e) {
                 if (e.keyCode == 13) {
-                    window.location.href = '/barcode-reader/search.html?q=' + $('#txtSearch').val();
+                    window.location.href = '/barcode-reader/search.html?q=' + $('#txtSearch').val() + '&refinement=javascript_web';
                 }
             })
         })
