--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -265,7 +265,7 @@
             <a href="{{ site.js }}faq/add-remove-beep-sound.html">How to add/remove a "beep" sound once a barcode is found?</a>
         </li>
         <li>
-            <a href="{{ site.js }}faq/size-of-wasm.html">What is the size of the JavaScript SDK (.wasm)?</a>
+            <a href="{{ site.js }}faq/nodejs-implementation.html">How do I create a NodeJS application using the SDK?</a>
         </li>
         <li>
             <a href="{{ site.js }}faq/check-current-version.html">How to check the version of the JavaScript SDK I am currently using?</a>
@@ -299,6 +299,15 @@
         </li>
         <li>
             <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license required in per-device licensing model?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/delay-when-open-camera.html">How to get rid of the delay when opening the camera?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/hide-laser-message-ui.html">How can I hide the laser bar and Dynamsoft message in the default UI of the BarcodeScanner?</a>
+        </li>
+        <li>
+            <a href="{{ site.js }}faq/ios-16-incompatible.html">Why is the Javascript SDK not recognizing any barcodes on iOS 16.4?</a>
         </li>
     </ul>
 </li>
