--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -120,7 +120,7 @@
         <li><a href="{{ site.js }}samples-demos/use-cases.html">Use Cases</a> </li>
         <li><a href="{{ site.js }}samples-demos/debug.html">Debug Sample</a></li>
         <li><a target="_blank" href="https://demo.dynamsoft.com/barcode-reader-js/"
-                class="otherLinkColour refreshLink">Main Demo nearrow;</a>
+                class="otherLinkColour refreshLink">Main Demo &nearrow;</a>
         </li>
     </ul>
 </li>
