build for release

--- a/_includes/sidelist-programming/programming-javascript-v9.6.11.html
+++ b/_includes/sidelist-programming/programming-javascript-v9.6.11.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{{ site.js }}" class="otherLinkColour">JS Edition Introduction</a>
+    <a href="{{ site.js }}" class="otherLinkColour">Introduction</a>
 </li>
 <li class="category">DEVELOPMENT</li>
 <li><a href="{{ site.js }}user-guide/default.html">User Guide</a>
