--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -464,6 +464,9 @@
                                 any barcodes
                                 on iOS 16.4?</a>
                 </li>
+                <li>
+                        <a href="{{ site.js }}faq/check-camera.html">How to check the camera permissions programmatically in Dynamsoft Barcode Reader JavaScript SDK?</a>
+                </li>
         </ul>
 </li>
 <li class="category">OTHERS</li>
