Lots of FAQ edits and fixes

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -327,7 +327,7 @@
                 <li>
                         <a href="{{ site.js }}faq/use-of-onFrameRead-and-onUnduplicateRead.html">When to use onFrameRead
                                 and when to
-                                use onUnduplicateRead?</a>
+                                use onUniqueRead?</a>
                 </li>
                 <li>
                         <a href="{{ site.js }}faq/call-loadWasm-proactively.html">Do we have to call loadWasm
@@ -347,8 +347,7 @@
                         <a href="{{ site.js }}faq/get-sdk-logs.html">How to get the logs for the JavaScript SDK?</a>
                 </li>
                 <li>
-                        <a href="{{ site.js }}faq/upgrade-old-to-new.html">How to upgrade from an old to new
-                                version?</a>
+                        <a href="{{ site.js }}faq/upgrade-old-to-new.html">How do you upgrade to a newer version of the SDK?</a>
                 </li>
                 <li>
                         <a href="{{ site.js }}faq/change-domain-binding-of-product-key.html">How to change the domain
@@ -445,9 +444,7 @@
                                 Per Concurrent Device?</a>
                 </li>
                 <li>
-                        <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license
-                                required in
-                                per-device licensing model?</a>
+                        <a href="{{ site.js }}faq/new-license-required-per-device-licensing.html">When is a new license spot taken when using a per-device licensing model?</a>
                 </li>
                 <li>
                         <a href="{{ site.js }}faq/delay-when-open-camera.html">How to get rid of the delay when opening
