--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -292,6 +292,7 @@
 <li><a href="{{ site.js }}upgrade-guide/" class="otherLinkColour">Upgrade Instructions</a>
         <ul>
                 <li><a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour">EOS for v7.x</a></li>
+                <li><a href="{{ site.js }}upgrade-guide/index.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
                 <li><a href="{{ site.js }}upgrade-guide/7to9.html" class="otherLinkColour">Upgrade v7 to v9</a></li>
         </ul>
 </li>
