--- a/_includes/dbrNav.html
+++ b/_includes/dbrNav.html
@@ -1,17 +1,16 @@
 <style>
-  #cp-header .action-buttons { display: none; }
-  #mdHeader { border-bottom: 0!important; }
-  #sideBarCnt.sidebar-fixed { position: fixed; max-height: unset; }
-  .rightSideMenu.rsm-fixed { position: fixed; top: 100px; }
-  #docHead { top: 186px; }
-  .productMenu .downloadBtn:hover { color: #ffffff!important; }
-  /* .sideBar { padding-top: 77px; } */
-  @media (max-width: 1679px){
-    #docHead {
-      top: 145px;
+    #cp-header .action-buttons { display: none; }
+    #mdHeader { border-bottom: 0!important; }
+    #sideBarCnt.sidebar-fixed { position: fixed; top: 88px; max-height: unset; }
+    .rightSideMenu.rsm-fixed { position: fixed; top: 100px; }
+    #docHead { top: 151px; }
+    .productMenu .downloadBtn:hover { color: #ffffff!important; }
+    @media (max-width: 1679px){
+      #docHead {
+        top: 145px;
+      }
     }
-  }
-</style>
+  </style>
 
 <div id="BarcodeReader" class="main">
     <div id="BarcodeReaderMenu" class="productMenu">
