--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -389,7 +389,7 @@
             <a href="{{ site.js }}faq/check-camera.html">How to check the camera permissions programmatically in Dynamsoft Barcode Reader JavaScript SDK?</a>
         </li>
         <li>
-            <a href="{{ site.js }}faq/ios-17-readability.html">How do I resolve the issue of the Barcode reader not recognizing any barcodes via video in iOS 17?</a>
+            <a href="{{ site.js }}faq/ios-17-readability.html">How do I resolve the issue of the Barcode Reader not recognizing any barcodes via video in iOS 17?</a>
         </li>
     </ul>
 </li>
