update api reference for v10. 30% done

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -99,15 +99,15 @@
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/intermediate-results/texture-removed-binary-image-unit.html" class="otherLinkColour">TextureRemovedBinaryImageUnit</a></li>
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/intermediate-results/texture-removed-grayscale-image-unit.html" class="otherLinkColour">TextureRemovedGrayscaleImageUnit</a></li>
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/intermediate-results/transformed-grayscale-image-unit.html" class="otherLinkColour">TransformedGrayscaleImageUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcodes-unit.html" class="otherLinkColour">CLocalizedBarcodesUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-unit.html" class="otherLinkColour">CDecodedBarcodesUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcode-element.html" class="otherLinkColour">CLocalizedBarcodesElement</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcode-element.html" class="otherLinkColour">CDecodedBarcodeElement</a></li>              
-                        <li lang="javascript"><a href="{{ site.js_api }}extended-barcode-result.html" class="otherLinkColour">CExtendedBarcodeResult</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}candidate-barcode-zones-unit.html" class="otherLinkColour">CCandidateBarcodeZonesUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}complemented-barcode-image-unit.html" class="otherLinkColour">CComplementedBarcodeImageUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}deformation-resisted-barcode-image-unit.html" class="otherLinkColour">CDeformationResistedBarcodeImageUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}scaled-up-barcode-image-unit.html" class="otherLinkColour">CScaledUpBarcodeImageUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcodes-unit.html" class="otherLinkColour">LocalizedBarcodesUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-unit.html" class="otherLinkColour">DecodedBarcodesUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcode-element.html" class="otherLinkColour">LocalizedBarcodesElement</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcode-element.html" class="otherLinkColour">DecodedBarcodeElement</a></li>              
+                        <li lang="javascript"><a href="{{ site.js_api }}extended-barcode-result.html" class="otherLinkColour">ExtendedBarcodeResult</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}candidate-barcode-zones-unit.html" class="otherLinkColour">CandidateBarcodeZonesUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}complemented-barcode-image-unit.html" class="otherLinkColour">ComplementedBarcodeImageUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}deformation-resisted-barcode-image-unit.html" class="otherLinkColour">DeformationResistedBarcodeImageUnit</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}scaled-up-barcode-image-unit.html" class="otherLinkColour">ScaledUpBarcodeImageUnit</a></li>
                     </ul>
                 </li>
                 <li lang="javascript"><a>Final Results</a>
@@ -118,9 +118,9 @@
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/basic-structures/captured-result-item.html" class="otherLinkColour">CapturedResultItem</a></li>
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/basic-structures/captured-result-receiver.html" class="otherLinkColour">CapturedResultReceiver</a></li>
                         <li lang="javascript"><a href="{{ site.dcv_js_api }}core/basic-structures/original-image-result-item.html"  class="otherLinkColour">OriginalImageResultItem</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}barcode-result-item.html" class="otherLinkColour">CBarcodeResultItem</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-result.html" class="otherLinkColour">CDecodedBarcodesResult</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-result-array.html" class="otherLinkColour">CDecodedBarcodesResultArray</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}barcode-result-item.html" class="otherLinkColour">BarcodeResultItem</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-result.html" class="otherLinkColour">DecodedBarcodesResult</a></li>
+                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-result-array.html" class="otherLinkColour">DecodedBarcodesResultArray</a></li>
                         <!--
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}text-line-result-item.html" class="otherLinkColour">CTextLineResultItem</a></li>
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}character-result.html" class="otherLinkColour">CCharacterResult</a></li>
