fix sidelist and index

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -208,7 +208,7 @@
                 <li lang="javascript"><a href="{{ site.enums }}core/section-type.html?lang=js"  class="otherLinkColour">SectionType</a></li>
                 <li lang="javascript"><a href="{{ site.enums }}core/target-type.html?lang=js"  class="otherLinkColour">TargetType</a></li>
                 <!--<li lang="javascript"><a href="{{ site.enums }}code-parser/validation-status.html?lang=js"  class="otherLinkColour">ValiadtionStatus</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/video-frame-quality.html?lang=js"  class="otherLinkColour">VideoFrameQuality</a></li>
+                <!--<li lang="javascript"><a href="{{ site.enums }}core/video-frame-quality.html?lang=js"  class="otherLinkColour">VideoFrameQuality</a></li>-->
                 <li lang="javascript"><a href="{{ site.enums }}core/colour-channel-usage-type.html?lang=js"  class="otherLinkColour">ColourChannelUsageType</a></li>
             </ul>
         </li>
