--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -139,14 +139,6 @@
                 </li>
             </ul>
         </li>
-        <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html" class="otherLinkColour">Utility</a>
-            <ul lang="javascript">
-                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/image-manager.html"  class="otherLinkColour">ImageManager</a></li>
-                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/multi-frame-result-cross-filter.html"  class="otherLinkColour">MultiFrameResultCrossFilter</a></li>
-                <!--<li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html"  class="otherLinkColour">UtilityModule</a></li>-->
-            </ul>
-        </li>
-        <!--
         <li lang="javascript"><a>Detailed Barcode Results</a>
             <ul lang="javascript">
                 <li lang="javascript"><a href="{{ site.js_api }}aztec-details.html" class="otherLinkColour">AztecDetails</a></li>
@@ -157,6 +149,14 @@
                 <li lang="javascript"><a href="{{ site.js_api }}qr-code-details.html" class="otherLinkColour">QRCodeDetails</a></li>
             </ul>
         </li>
+        <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html" class="otherLinkColour">Utility</a>
+            <ul lang="javascript">
+                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/image-manager.html"  class="otherLinkColour">ImageManager</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/multi-frame-result-cross-filter.html"  class="otherLinkColour">MultiFrameResultCrossFilter</a></li>
+                <!--<li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html"  class="otherLinkColour">UtilityModule</a></li>-->
+            </ul>
+        </li>
+        <!--
         <li lang="javascript"><a>Settings</a>
             <ul lang="javascript">
                 <li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/structs/simplified-capture-vision-settings.html"  class="otherLinkColour">SimplifiedCaptureVisionSettings</a></li>
@@ -186,30 +186,30 @@
         -->
         <li lang="javascript"><a>Enumerations</a>   
             <ul lang="javascript">
-                <!--<li lang="javascript"><a href="{{ site.enums }}barcode-reader/barcode-format.html?lang=js"  class="otherLinkColour">BarcodeFormat</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/buffer-overflow-protection-mode.html?lang=js"  class="otherLinkColour">BufferOverflowProtectionMode</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/captured-result-item-type.html?lang=js"  class="otherLinkColour">CapturedResultItemType</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}capture-vision-router/capture-state.html?lang=js"  class="otherLinkColour">CaptureState</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/corner-type.html?lang=js"  class="otherLinkColour">CornerType</a></li>
-                <!--<li lang="javascript"><a href="{{ site.enums }}barcode-reader/deblur-mode.html?lang=js"  class="otherLinkColour">DeblurMode</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/error-code.html?lang=js"  class="otherLinkColour">ErrorCode</a></li>
-                <!--<li lang="javascript"><a href="{{ site.enums }}barcode-reader/extended-barcode-result-type.html?lang=js"  class="otherLinkColour">ExtendedBarcodeResultType</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/grayscale-transformation-mode.html?lang=js"  class="otherLinkColour">GrayscaleTransformationMode</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}barcode-reader/barcode-format.html?lang=js"  class="otherLinkColour">BarcodeFormat</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/buffer-overflow-protection-mode.html?lang=js"  class="otherLinkColour">BufferOverflowProtectionMode</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/captured-result-item-type.html?lang=js"  class="otherLinkColour">CapturedResultItemType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}capture-vision-router/capture-state.html?lang=js"  class="otherLinkColour">CaptureState</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/corner-type.html?lang=js"  class="otherLinkColour">CornerType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}barcode-reader/deblur-mode.html?lang=js"  class="otherLinkColour">DeblurMode</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/error-code.html?lang=js"  class="otherLinkColour">ErrorCode</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}barcode-reader/extended-barcode-result-type.html?lang=js"  class="otherLinkColour">ExtendedBarcodeResultType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/grayscale-transformation-mode.html?lang=js"  class="otherLinkColour">GrayscaleTransformationMode</a></li>
                 <!--<li lang="javascript"><a href="{{ site.enums }}core/image-capture-distance-mode.html?lang=js"  class="otherLinkColour">ImageCaptureDistanceMode</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/image-pixel-format.html?lang=js"  class="otherLinkColour">ImagePixelFormat</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/image-source-state.html?lang=js"  class="otherLinkColour">ImageSourceState</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/image-tag-type.html?lang=js"  class="otherLinkColour">ImageTagType</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/intermediate-result-unit-type.html?lang=js"  class="otherLinkColour">IntermediateResultUnitType</a></li>
-                <!--<li lang="javascript"><a href="{{ site.enums }}barcode-reader/localization-mode.html?lang=js"  class="otherLinkColour">LocalizationMode</a></li>-->
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/image-pixel-format.html?lang=js"  class="otherLinkColour">ImagePixelFormat</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/image-source-state.html?lang=js"  class="otherLinkColour">ImageSourceState</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/image-tag-type.html?lang=js"  class="otherLinkColour">ImageTagType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/intermediate-result-unit-type.html?lang=js"  class="otherLinkColour">IntermediateResultUnitType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}barcode-reader/localization-mode.html?lang=js"  class="otherLinkColour">LocalizationMode</a></li>
                 <!--<li lang="javascript"><a href="{{ site.enums }}code-parser/mapping-status.html?lang=js"  class="otherLinkColour">MappingStatus</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/pdf-reading-mode.html?lang=js"  class="otherLinkColour">PDFReadingMode</a></li>
-                <!--<li lang="javascript"><a href="{{ site.enums }}barcode-reader/qr-code-error-correction-level.html?lang=js"  class="otherLinkColour">QRCodeErrorCorrectionLevel</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/region-object-element-type.html?lang=js"  class="otherLinkColour">RegionObjectElementType</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/section-type.html?lang=js"  class="otherLinkColour">SectionType</a></li>
-                <li lang="javascript"><a href="{{ site.enums }}core/target-type.html?lang=js"  class="otherLinkColour">TargetType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/pdf-reading-mode.html?lang=js"  class="otherLinkColour">PDFReadingMode</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}barcode-reader/qr-code-error-correction-level.html?lang=js"  class="otherLinkColour">QRCodeErrorCorrectionLevel</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/region-object-element-type.html?lang=js"  class="otherLinkColour">RegionObjectElementType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/section-type.html?lang=js"  class="otherLinkColour">SectionType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/target-type.html?lang=js"  class="otherLinkColour">TargetType</a></li>
                 <!--<li lang="javascript"><a href="{{ site.enums }}code-parser/validation-status.html?lang=js"  class="otherLinkColour">ValiadtionStatus</a></li>-->
                 <!--<li lang="javascript"><a href="{{ site.enums }}core/video-frame-quality.html?lang=js"  class="otherLinkColour">VideoFrameQuality</a></li>-->
-                <li lang="javascript"><a href="{{ site.enums }}core/colour-channel-usage-type.html?lang=js"  class="otherLinkColour">ColourChannelUsageType</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_enumerations }}core/colour-channel-usage-type.html?lang=js"  class="otherLinkColour">ColourChannelUsageType</a></li>
             </ul>
         </li>
     </ul>
