add simplified settings

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -59,16 +59,11 @@
                 </li>
                 <li lang="javascript"><a>Intermediate Results</a>
                     <ul lang="javascript"> 
-                        <!--                
-                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcodes-unit.html" class="otherLinkColour">CLocalizedBarcodesUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcodes-unit.html" class="otherLinkColour">CDecodedBarcodesUnit</a></li>
+                        <!-- 
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}localized-text-lines-unit.html" class="otherLinkColour">CLocalizedTextLinesUnit</a></li>
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}recognized-text-lines-unit.html" class="otherLinkColour">CRecognizedTextLinesUnit</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}localized-barcode-element.html" class="otherLinkColour">CLocalizedBarcodesElement</a></li>
-                        <li lang="javascript"><a href="{{ site.js_api }}decoded-barcode-element.html" class="otherLinkColour">CDecodedBarcodeElement</a></li>
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}localized-text-line-element.html" class="otherLinkColour">CLocalizedTextLineElement</a></li>
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}recognized-text-line-element.html" class="otherLinkColour">CRecognizedTextLineElement</a></li>               
-                        <li lang="javascript"><a href="{{ site.js_api }}extended-barcode-result.html" class="otherLinkColour">CExtendedBarcodeResult</a></li>
                         <li lang="javascript"><a href="{{ site.ddn_js_api }}candidate-quad-edges-unit.html" class="otherLinkColour">CandidateQuadEdgesUnit</a></li>
                         <li lang="javascript"><a href="{{ site.ddn_js_api }}corners-unit.html" class="otherLinkColour">CornersUnit</a></li>
                         <li lang="javascript"><a href="{{ site.ddn_js_api }}detected-quad-element.html" class="otherLinkColour">DetectedQuadElement</a></li>
@@ -139,6 +134,13 @@
                 </li>
             </ul>
         </li>
+        <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html" class="otherLinkColour">Utility</a>
+            <ul lang="javascript">
+                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/image-manager.html"  class="otherLinkColour">ImageManager</a></li>
+                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/multi-frame-result-cross-filter.html"  class="otherLinkColour">MultiFrameResultCrossFilter</a></li>
+                <!--<li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html"  class="otherLinkColour">UtilityModule</a></li>-->
+            </ul>
+        </li>
         <li lang="javascript"><a>Detailed Barcode Results</a>
             <ul lang="javascript">
                 <li lang="javascript"><a href="{{ site.js_api }}aztec-details.html" class="otherLinkColour">AztecDetails</a></li>
@@ -149,11 +151,10 @@
                 <li lang="javascript"><a href="{{ site.js_api }}qr-code-details.html" class="otherLinkColour">QRCodeDetails</a></li>
             </ul>
         </li>
-        <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html" class="otherLinkColour">Utility</a>
+        <li lang="javascript"><a>SimplifiedSettings</a>
             <ul lang="javascript">
-                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/image-manager.html"  class="otherLinkColour">ImageManager</a></li>
-                <li lang="javascript"><a href="{{ site.dcv_js_api }}utility/multi-frame-result-cross-filter.html"  class="otherLinkColour">MultiFrameResultCrossFilter</a></li>
-                <!--<li lang="javascript"><a href="{{ site.dcv_js_api }}utility/utility-module.html"  class="otherLinkColour">UtilityModule</a></li>-->
+                <li lang="javascript"><a href="{{ site.dcv_js_api }}capture-vision-router/interfaces/simplified-capture-vision-settings.html" class="otherLinkColour">SimplifiedCaptureVisionSettings</a></li>
+                <li lang="javascript"><a href="{{ site.js_api }}simplified-barcode-reader-settings.html" class="otherLinkColour">SimplifiedBarcodeReaderSettings</a></li>
             </ul>
         </li>
         <!--
