remove some materials that are not ready

--- a/_includes/sidelist-programming/programming-javascript-v9.6.31.html
+++ b/_includes/sidelist-programming/programming-javascript-v9.6.31.html
@@ -213,7 +213,7 @@
         </li>
     </ul>
 </li>
-<li><a style="cursor:pointer;color:#3c3c3c">Upgrade Instructions</a>
+<li><a href="{{ site.js }}upgrade-guide/index.html" style="cursor:pointer;color:#3c3c3c">Upgrade Instructions</a>
     <ul>
         <li><a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour">EOS for v7.x</a></li>
         <li><a href="{{ site.js }}upgrade-guide/index.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
