add see also links

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -607,13 +607,13 @@
                 >DecodedBarcodesResult</a
               >
             </li>
-            <li lang="javascript">
+            <!--<li lang="javascript">
               <a
                 href="{{ site.js_api }}decoded-barcodes-result-array.html"
                 class="otherLinkColour"
                 >DecodedBarcodesResultArray</a
               >
-            </li>
+            </li>-->
             <!--
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}text-line-result-item.html" class="otherLinkColour">CTextLineResultItem</a></li>
                         <li lang="javascript"><a href="{{ site.dlr_js_api }}character-result.html" class="otherLinkColour">CCharacterResult</a></li>
