finish upgrade guide

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -157,14 +157,14 @@
           <a
             href="{{ site.dcv_js_api }}capture-vision-router/single-file-processing.html"
             class="otherLinkColour"
-            >Single-File Processing</a
+            >Single-Image Processing</a
           >
         </li>
         <li lang="javascript">
           <a
             href="{{ site.dcv_js_api }}capture-vision-router/multiple-file-processing.html"
             class="otherLinkColour"
-            >Multiple-File Processing</a
+            >Multiple-Image Processing</a
           >
         </li>
         <li lang="javascript">
