updated menu items

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -925,3 +925,11 @@
     </li>
   </ul>
 </li>
+<li><a href="{{ site.js }}upgrade-guide/index.html" style="cursor:pointer;color:#3c3c3c">Upgrade Instructions</a>
+  <ul>
+      <li><a href="{{ site.js }}upgrade-guide/9to10.html" class="otherLinkColour">Upgrade v9 to v10</a></li>
+      <li><a href="{{ site.js }}upgrade-guide/8to9.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
+      <li><a href="{{ site.js }}upgrade-guide/7to9.html" class="otherLinkColour">Upgrade v7 to v9</a></li>
+      <li><a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour">EOS for v7.x</a></li>
+    </ul>
+</li>
