added some links to APIs in upgrade guide

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -141,6 +141,13 @@
     </li>
     <li lang="javascript">
       <a
+        href="{{ site.js_api }}barcode-reader-module.html"
+        class="otherLinkColour"
+        >BarcodeReaderModule</a
+      >
+    </li>
+    <li lang="javascript">
+      <a
         href="{{ site.dcv_js_api }}capture-vision-router/capture-vision-router-module.html"
         class="otherLinkColour"
         >CaptureVisionRouter</a
@@ -925,11 +932,32 @@
     </li>
   </ul>
 </li>
-<li><a href="{{ site.js }}upgrade-guide/index.html" style="cursor:pointer;color:#3c3c3c">Upgrade Instructions</a>
+<li>
+  <a
+    href="{{ site.js }}upgrade-guide/index.html"
+    style="cursor: pointer; color: #3c3c3c"
+    >Upgrade Instructions</a
+  >
   <ul>
-      <li><a href="{{ site.js }}upgrade-guide/9to10.html" class="otherLinkColour">Upgrade v9 to v10</a></li>
-      <li><a href="{{ site.js }}upgrade-guide/8to9.html" class="otherLinkColour">Upgrade v8 to v9</a></li>
-      <li><a href="{{ site.js }}upgrade-guide/7to9.html" class="otherLinkColour">Upgrade v7 to v9</a></li>
-      <li><a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour">EOS for v7.x</a></li>
-    </ul>
+    <li>
+      <a href="{{ site.js }}upgrade-guide/9to10.html" class="otherLinkColour"
+        >Upgrade v9 to v10</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}upgrade-guide/8to9.html" class="otherLinkColour"
+        >Upgrade v8 to v9</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}upgrade-guide/7to9.html" class="otherLinkColour"
+        >Upgrade v7 to v9</a
+      >
+    </li>
+    <li>
+      <a href="{{ site.js }}upgrade-guide/7-notice.html" class="otherLinkColour"
+        >EOS for v7.x</a
+      >
+    </li>
+  </ul>
 </li>
